apps/monitoring/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`homepage.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
    - match: Host(`homepage.${SECRET_PUBLIC_DOMAIN}`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
